@@ -98,7 +98,6 @@
                     <configuration>
                         <testFailureIgnore>false</testFailureIgnore>
                         <argLine>
-                            -Xmx1024m -XX:MaxPermSize=256m
                             -Dtestng.dtd.http=true
                             -javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
                         </argLine>
